// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeliveryCity renders with a custom value 1`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           value="foobar"
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with a custom value 2`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           value="foobar"
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with a disabled input element 1`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           disabled
           value
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with a disabled input element 2`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           disabled
           value
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with an error 1`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           value
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with an error 2`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text o-forms-input--invalid">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           value
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with default props 1`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           value
    >
  </span>
</label>
`;

exports[`DeliveryCity renders with default props 2`] = `
<label id="deliveryCityField"
       class="o-forms-field"
       data-validate="required"
       for="deliveryCity"
>
  <span class="o-forms-title">
    <span class="o-forms-title__main">
      City/town
    </span>
  </span>
  <span class="o-forms-input o-forms-input--text">
    <input type="text"
           id="deliveryCity"
           name="deliveryCity"
           data-trackable="field-deliveryCity"
           autocomplete="address-level2"
           placeholder="e.g. Bath"
           aria-required="true"
           required
           value
    >
  </span>
</label>
`;
